         libraries.
20111223 peripherals/nic/{w5100_internals.h,w5100_socket.c}: make UDP servers
         bind to the right port (Phil/Sergio).
20111230 ui/sdl/sdldisplay.c: modify sdldisplay_find_best_fullscreen_scaler()
         to prevent the search for a suitable fullscreen scaler from becoming
         recursive when there is only one high resolution mode available
         (thanks, Phil Reynolds and Sergio Baldoví) (Fred).
20111230 ui/sdl/sdljoystick.c: shutdown the SDL library properly when using
         SDL joystick support with GTK+ etc. (fixes bug #3467162) (Sergio
         Baldoví).
20120103 configure.in: prefer use of SDL joystick code over libjsw which is
         not maintained (patch #3467163) (Sergio Baldoví).
20120103 ui/gtk/debugger.c: combine identical lines in the GTK+ debugger memory
         map, so we don't display 16 lines if we don't need to.
20120106 peripherals/flash: add .deps and Makefile to the ignore property
         (Fred).
20120106 README: add suggested compiler for Mac OS X (Fred).
20120109 debugger/breakpoint.c: return the correct page when trying to match
	 breakpoints (fixes bug #3470425).
20120109 debugger/breakpoint.c: remove debugging code.
20120109 peripherals/{disk/{beta.c,plusd.c},ide/{zxatasp.c,zxcf.c}: fix up
         mismerged files.
20120109 peripherals/if1.c: one more mismerged file.
20120112 compat.h,compat/unix/socket.c,compat/win32/socket.c,configure.in,
         peripherals/nic/{w5100.c,w5100_internals.h,w5100_socket.c}: abstract
         out selfpipe functionality.
20120113 compat.h,compat/unix/socket.c,compat/win32/socket.c: completely blind
         attempt to add Win32 "selfpipe" functionality.
20120116 peripherals/spectranet.c: emulate the non-prototype Spectranet.
20120119 debugger/debugger.c,event.c,peripherals/disk/{beta.c,fdd.c,upd_fdc.c,
         wd_fdc.c},rzx.c,spectrum.c,tape.c,timer/timer.c,z80/z80.c: make
         event_register() just blow up if it can't allocate memory.