@@ -156,9 +156,8 @@ divide_init( void )
   }
 
   periph_register( PERIPH_TYPE_DIVIDE, &divide_periph );
-  if( periph_register_paging_events( event_type_string, &page_event,
-				     &unpage_event ) )
-    return 1;
+  periph_register_paging_events( event_type_string, &page_event,
+                                 &unpage_event );
 
   return 0;
 }
