@@ -3967,3 +3967,7 @@
 20120119 debugger/debugger.c,event.c,peripherals/disk/{beta.c,fdd.c,upd_fdc.c,
          wd_fdc.c},rzx.c,spectrum.c,tape.c,timer/timer.c,z80/z80.c: make
          event_register() just blow up if it can't allocate memory.
+20120119 debugger/event.c,fuse.c,periph.c,peripherals/{ide/{divide.c,zxatasp.c,
+         zxcf.c},if1.[ch],spectranet.[ch]},periph.h,rzx.[ch],tape.[ch]: make
+         debugger_event_register() just blow up if it can't allocate memory.
+
